<resources>
    <string name="app_name">Journal App</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">Username</string>
    <string name="user_email">Email</string>
    <string name="sign_in_google">Use google to sign in</string>
    <string name="user_password">Password</string>
    <string name="edit_text_title">Enter a title</string>
    <string name="edit_text_body">What\'s on your mind.</string>
    <string name="btn_save">save</string>
</resources>
